--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>RESERVIA</title>
   </head>
   <body>
     <div class="container">
       <header class="bg-dark text-white">
-        <img src="images/logo/Reservia@3x.png" />
+        <img src="images/logo/Reservia@3x.png" alt="" />
         <nav>
           <ul class="nav">
             <li class="nav-item">
@@ -17,65 +18,69 @@
             <li class="nav-item">
               <a href="index.html" class="nav-link active">Activités</a>
             </li>
-            <map name="">
             <li class="nav-inscription">
               <a href="index.html" class="nav-link active">S'inscrire</a>
             </li>
-          </map>
           </ul>
         </nav>
         <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
         <h1>En plein centre ville ou en pleine nature</h1>
-        <table>
-          <summary>Hébergements à Marseille</summary> 
-        <div class="image-wrapper"></div>
-          <img
-            src="images/hebergements/"
-          />
-          <div class="image-wrapper">
-            <img
-              src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-            />
-          <legend>
-          </caption>Hôtel de la mer</caption>
+      </header>
+      <h1>Hébergements à Marseille</h1>
+      <div class="image-wrapper"></div>
+      <img src="images/hebergements/" alt="" />
+      <div class="image-wrapper">
+        <img
+          src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+          alt=""
+        />
+        <!-- <legend>
+          <caption>Hôtel de la mer</caption>
           <li>Nuit à partir de 46$</li>
         </legend>
-        <legend>Afficher plus</legend>
+        <legend>Afficher plus</legend> -->
       </div>
-      <multicol>Activités à Marseille
-        <img
-              src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-            />
-            <legend>Vieux port</legend>
-            <aligne/>
-        <img
-                src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
-            />
-          </div>
-        <img
-                src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
-            />
-            <aligne>
-          </multicol>
-        </table>
-          </footer>
-          <area shape="" coords="" href="" alt="">
-      <h3>A propos</h3>
-      <ul>
-        <li>Fontionnement du site</li>
-        <li>Conditions générales de vente</li>
-        <li>Données et confidentialité</li>
-      </ul>
-      <h3>Nos hébergements</h3>
-      <ul>
-        <li>Charte qualité</li>
-        <li>Soumettre votre hôtel</li>
-      </ul>
-      <h3>Assistance</h3>
-      <ul>
-        <li>Centre d'aide</li>
-        <li>Nous contacter</li>
-      </ul>
+      Activités à Marseille
+      <img
+        src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+        alt=""
+      />
+      <span>Vieux port</span>
+      <img
+        src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
+        alt=""
+      />
+    </div>
+    <img
+      src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
+      alt=""
+    />
+
+    <footer>
+      <div class="footer-section">
+        <h3>A propos</h3>
+        <ul>
+          <li>Fontionnement du site</li>
+          <li>Conditions générales de vente</li>
+          <li>Données et confidentialité</li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Nos hébergements</h3>
+        <ul>
+          <li>Charte qualité</li>
+          <li>Soumettre votre hôtel</li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Assistance</h3>
+        <ul>
+          <li>Centre d'aide</li>
+          <li>Nous contacter</li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
