--- a/index.html
+++ b/index.html
@@ -9,78 +9,132 @@
   <body>
     <div class="container">
       <header class="bg-dark text-white">
-        <img src="images/logo/Reservia@3x.png" alt="" />
-        <nav>
-          <ul class="nav">
-            <li class="nav-item">
+        <div class="top-header">
+          <img src="images/logo/Reservia@3x.png" alt="" />
+          <nav>
+            <div class="nav-item">
               <a href="index.html" class="nav-link active">Hébergement</a>
-            </li>
-            <li class="nav-item">
+            </div>
+            <div class="nav-item">
               <a href="index.html" class="nav-link active">Activités</a>
-            </li>
-            <li class="nav-inscription">
-              <a href="index.html" class="nav-link active">S'inscrire</a>
-            </li>
-          </ul>
-        </nav>
+            </div>
+          </nav>
+          <div class="nav-inscription">
+            <a href="index.html" class="nav-link active">S'inscrire</a>
+          </div>
+        </div>
         <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
         <h1>En plein centre ville ou en pleine nature</h1>
+        <section class="section">
+          <h1>Marseille, France Rechercher</h1>
+        </section>
       </header>
-      <h1>Hébergements à Marseille</h1>
-      <div class="image-wrapper"></div>
-      <img src="images/hebergements/" alt="" />
-      <div class="image-wrapper">
-        <img
-          src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-          alt=""
-        />
-        <!-- <legend>
-          <caption>Hôtel de la mer</caption>
-          <li>Nuit à partir de 46$</li>
-        </legend>
-        <legend>Afficher plus</legend> -->
-      </div>
-      Activités à Marseille
+      <span>Hébergements à Marseille</span>
+      <img
+        src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Auberge de la Cannebière</h1>
+        Nuit à partir de 25$
+      </span>
+      <img
+        src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Hotel du port</h1>
+        Nuit à partir de 52$
+      </span>
+      <img
+        src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Hotel Les mouettes</h1>
+        Nuit à partir de 76$
+      </span>
+      <img
+        src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Hotel de la mer</h1>
+        Nuit à partir de 46$
+      </span>
+      <img
+        src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Auberge le Panier</h1>
+        Nuit à partir de 23$
+      </span>
+      <img
+        src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+        alt=""
+      />
+      <span>
+        <h1>Hotel chez Amina</h1>
+        Nuit à partir de 96$
+      </span>
+    </div>
+    <div class="container">
+      <span>Activités à Marseille</span>
       <img
         src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
         alt=""
       />
-      <span>Vieux port</span>
+      <span>Vieux Port</span>
       <img
-        src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
+        src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
         alt=""
       />
+      <span>Fort de Pomègues</span>
+      <img
+        src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+        alt=""
+      />
+      <span>Îles du Frioul</span>
+      <img
+        src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+        alt=""
+      />
+      <span>Parc National des Calanques</span>
+      <img
+        src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+        alt=""
+      />
+      <span>Notre-Dame-de-la-Garde</span>
+      <img
+        src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+        alt=""
+      />
+      <span>Parc Longchamp</span>
     </div>
-    <img
-      src="images/activites/4_small/paul-hermann-QFTrLdQIRhl-unsplash.jpg"
-      alt=""
-    />
-
-    <footer>
-      <div class="footer-section">
-        <h3>A propos</h3>
-        <ul>
-          <li>Fontionnement du site</li>
-          <li>Conditions générales de vente</li>
-          <li>Données et confidentialité</li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Nos hébergements</h3>
-        <ul>
-          <li>Charte qualité</li>
-          <li>Soumettre votre hôtel</li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Assistance</h3>
-        <ul>
-          <li>Centre d'aide</li>
-          <li>Nous contacter</li>
-        </ul>
-      </div>
-    </footer>
   </body>
+  <footer>
+    <div class="footer-section">
+      <h3>A propos</h3>
+      <ul>
+        <li>Fontionnement du site</li>
+        <li>Conditions générales de vente</li>
+        <li>Données et confidentialité</li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h3>Nos hébergements</h3>
+      <ul>
+        <li>Charte qualité</li>
+        <li>Soumettre votre hôtel</li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h3>Assistance</h3>
+      <ul>
+        <li>Centre d'aide</li>
+        <li>Nous contacter</li>
+      </ul>
+    </div>
+  </footer>
 </html>
