--- a/index.html
+++ b/index.html
@@ -4,137 +4,184 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="styles.css" />
-    <title>RESERVIA</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
+      <title>RESERVIA></title>
   </head>
   <body>
     <div class="container">
-      <header class="bg-dark text-white">
+      <header>
         <div class="top-header">
           <img src="images/logo/Reservia@3x.png" alt="" />
-          <nav>
+          <div class="blocknav">
             <div class="nav-item">
-              <a href="index.html" class="nav-link active">Hébergement</a>
+              <a href="index.html" class="nav-link-active">Hébergement</a>
             </div>
             <div class="nav-item">
-              <a href="index.html" class="nav-link active">Activités</a>
+              <a href="index.html" class="nav-link-active">Activités</a>
             </div>
-          </nav>
-          <div class="nav-inscription">
-            <a href="index.html" class="nav-link active">S'inscrire</a>
+            <div class="nav-inscription">
+             <a href="index.html" class="nav-link-active">S'inscrire</a>
+            </div>
           </div>
         </div>
-        <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
-        <h1>En plein centre ville ou en pleine nature</h1>
+        <div class="trouvez">
+          <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
+          En plein centre ville ou en pleine nature
+        </div>
         <section class="section">
-          <h1>Marseille, France Rechercher</h1>
+         <h1>Marseille, France Rechercher</h1>
+         <h2>Filtres</h2>
+         <li>Plus de 500 hébergments sont disponibles dans cette ville</li>
         </section>
       </header>
-      <span>Hébergements à Marseille</span>
-      <img
-        src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Auberge de la Cannebière</h1>
-        Nuit à partir de 25$
-      </span>
-      <img
-        src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Hotel du port</h1>
-        Nuit à partir de 52$
-      </span>
-      <img
-        src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Hotel Les mouettes</h1>
-        Nuit à partir de 76$
-      </span>
-      <img
-        src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Hotel de la mer</h1>
-        Nuit à partir de 46$
-      </span>
-      <img
-        src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Auberge le Panier</h1>
-        Nuit à partir de 23$
-      </span>
-      <img
-        src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-        alt=""
-      />
-      <span>
-        <h1>Hotel chez Amina</h1>
-        Nuit à partir de 96$
-      </span>
     </div>
-    <div class="container">
-      <span>Activités à Marseille</span>
-      <img
-        src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-        alt=""
-      />
-      <span>Vieux Port</span>
-      <img
-        src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-        alt=""
-      />
-      <span>Fort de Pomègues</span>
-      <img
-        src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-        alt=""
-      />
-      <span>Îles du Frioul</span>
-      <img
-        src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-        alt=""
-      />
-      <span>Parc National des Calanques</span>
-      <img
-        src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-        alt=""
-      />
-      <span>Notre-Dame-de-la-Garde</span>
-      <img
-        src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-        alt=""
-      />
-      <span>Parc Longchamp</span>
-    </div>
+      <div class="block1">
+         <h1 class="blocktitle">Hébergements à Marseille</h1>
+        <div class="mini11">
+          <div>
+            <img
+             src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+             alt=""
+            />
+            <div>
+              <h1 class="blocktitle">Auberge de la Cannebière</h1>
+              Nuit à partir de 25$
+            </div>
+          </div>
+          <div>
+            <img
+              src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+              alt=""
+            />
+            <div>
+              <h1 class="blocktitle">Hotel du port</h1>
+              Nuit à partir de 52$
+            </div>
+          </div> 
+          <div>
+            <img
+             src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+             alt=""
+            />
+            <div>
+             <h1 class="blocktitle">Hotel Les mouettes</h1>
+             Nuit à partir de 76$
+            </div>
+          </div>
+        </div>
+        <div class="mini12">
+          <div>
+            <img
+              src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+              alt=""
+            />
+            <div>
+              <h1 class="blocktitle">Hotel de la mer</h1>
+               Nuit à partir de 46$
+            </div>
+          </div>
+          <div>
+            <img
+              src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+              alt=""
+            />
+            <div>
+             <h1 class="blocktitle">Auberge le Panier</h1>
+             Nuit à partir de 23$
+            </div>
+          </div>
+          <div>
+            <img
+              src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+              alt=""
+            />
+            <div>
+             <h1 class="blocktitle">Hotel chez Amina</h1>
+             Nuit à partir de 96$
+            </div>
+          </div>
+        </div>
+          <div class="afficher">
+           <h1 class="text">Afficher plus</h1>
+          </div>
+        </div>   
+      </div>
+        <h1 class="blocktitle">Activités à Marseille</h1>  
+      <div class="block2">
+          <div class="mini21">
+            <img
+              src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+             alt=""
+            />
+            <caption>Vieux Port</caption>
+          </div>
+        <div class="inblock">
+          <div class="mini22">
+            <img
+             src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+             alt=""
+            />
+            <legend>Fort de Pomègues</legend>
+          </div>
+          <div class="mini23">
+            <img
+             src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+             alt=""
+            />
+            <div>Îles du Frioul</div>
+          </div>
+        </div>
+          <div class="mini24">
+            <img
+             src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+             alt=""
+            />
+            <div>Parc National des Calanques</div>
+          </div>
+        <div class="inblock">
+          <div class="mini25">
+            <img
+             src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+             alt=""
+            />
+            <div>Notre-Dame-de-la-Garde</div>
+          </div>
+          <div class="mini26">
+            <img
+             src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+             alt=""
+            />
+            <div>Parc Longchamp</div>
+          </div>
+        </div>
+      </div>
+    <footer>
+      <div class="footer-section">
+        <h3>A propos</h3>
+        <ul>
+          <a href=""><li>Fontionnement du site</li></a>
+          <a href=""><li>Conditions générales de vente</li></a>
+          <a href=""><li>Données et confidentialité</li></a>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Nos hébergements</h3>
+        <ul>
+          <a href=""><li>Charte qualité</li></a>
+          <a href=""><li>Soumettre votre hôtel</li></a>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Assistance</h3>
+        <ul>
+          <a href=""><li>Centre d'aide</li></a>
+          <a href=""><li>Nous contacter</li></a>
+        </ul>
+      </div>
+    </footer>
   </body>
-  <footer>
-    <div class="footer-section">
-      <h3>A propos</h3>
-      <ul>
-        <li>Fontionnement du site</li>
-        <li>Conditions générales de vente</li>
-        <li>Données et confidentialité</li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <h3>Nos hébergements</h3>
-      <ul>
-        <li>Charte qualité</li>
-        <li>Soumettre votre hôtel</li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <h3>Assistance</h3>
-      <ul>
-        <li>Centre d'aide</li>
-        <li>Nous contacter</li>
-      </ul>
-    </div>
-  </footer>
 </html>
