--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
-      <title>RESERVIA></title>
+    <script src="https://kit.fontawesome.com/c71f5f06e9.js" crossorigin="anonymous"></script>
+    <title>RESERVIA></title>
   </head>
   <body>
     <div class="container">
@@ -24,7 +25,7 @@
               <a href="index.html" class="nav-link-active">Activités</a>
             </div>
             <div class="nav-inscription">
-             <a href="index.html" class="nav-link-active">S'inscrire</a>
+              <a href="index.html" class="nav-link-active">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -33,27 +34,36 @@
           En plein centre ville ou en pleine nature
         </div>
         <section class="section">
-         <h1>Marseille, France Rechercher</h1>
-         <h2>Filtres</h2>
-         <li>Plus de 500 hébergments sont disponibles dans cette ville</li>
+          <h1 class="marseille"><i class="fas fa-map-marker-alt"></i>Marseille, France<span class="rechercher">Rechercher</span></h1>
+          <h2 class="filters">
+           <span>Filtres</span>
+           <span class="filtersin"><i class="fas fa-money-bill-wave"></i>Economies</span>
+           <span class="filtersin"><i class="fas fa-child"></i>Familial</span>
+           <span class="filtersin"><i class="fas fa-heart"></i>Romantique</span>
+           <span class="filtersin"><i class="fas fa-dog"></i>Animaux autorisés</span>
+          </h2>
+          <li class="hbg"><i class="fas fa-info-circle"></i>Plus de 500 hébergments sont disponibles dans cette ville</li>
         </section>
       </header>
     </div>
-      <div class="block1">
-         <h1 class="blocktitle">Hébergements à Marseille</h1>
-        <div class="mini11">
-          <div>
+    <div class="container2">
+      <div class="blockheb">
+        <h1 class="blocktitle">Hébergements à Marseille</h1>
+        <div class="miniblockheb">
+          <div class="miniblockpic">
             <img
-             src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-             alt=""
+              class="imgblock"
+              src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+              alt=""
             />
             <div>
               <h1 class="blocktitle">Auberge de la Cannebière</h1>
               Nuit à partir de 25$
             </div>
           </div>
-          <div>
+          <div class="miniblockpic">
             <img
+              class="imgblock"
               src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
               alt=""
             />
@@ -61,104 +71,152 @@
               <h1 class="blocktitle">Hotel du port</h1>
               Nuit à partir de 52$
             </div>
-          </div> 
-          <div>
+          </div>
+          <div class="miniblockpic">
             <img
-             src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-             alt=""
+              class="imgblock"
+              src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+              alt=""
             />
             <div>
-             <h1 class="blocktitle">Hotel Les mouettes</h1>
-             Nuit à partir de 76$
+              <h1 class="blocktitle">Hotel Les mouettes</h1>
+              Nuit à partir de 76$
             </div>
           </div>
         </div>
-        <div class="mini12">
-          <div>
+        <div class="miniblockheb">
+          <div class="miniblockpic">
             <img
+              class="imgblock"
               src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
               alt=""
             />
             <div>
               <h1 class="blocktitle">Hotel de la mer</h1>
-               Nuit à partir de 46$
+              Nuit à partir de 46$
             </div>
           </div>
-          <div>
+          <div class="miniblockpic">
             <img
+              class="imgblock"
               src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
               alt=""
             />
             <div>
-             <h1 class="blocktitle">Auberge le Panier</h1>
-             Nuit à partir de 23$
+              <h1 class="blocktitle">Auberge le Panier</h1>
+              Nuit à partir de 23$
             </div>
           </div>
-          <div>
+          <div class="miniblockpic">
             <img
+              class="imgblock"
               src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
               alt=""
             />
             <div>
-             <h1 class="blocktitle">Hotel chez Amina</h1>
-             Nuit à partir de 96$
+              <h1 class="blocktitle">Hotel chez Amina</h1>
+              Nuit à partir de 96$
             </div>
           </div>
         </div>
-          <div class="afficher">
-           <h1 class="text">Afficher plus</h1>
-          </div>
-        </div>   
+        <div class="afficher">
+          <h1 class="text">Afficher plus</h1>
+        </div>
       </div>
-        <h1 class="blocktitle">Activités à Marseille</h1>  
-      <div class="block2">
-          <div class="mini21">
-            <img
-              src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-             alt=""
-            />
-            <caption>Vieux Port</caption>
-          </div>
-        <div class="inblock">
-          <div class="mini22">
-            <img
-             src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-             alt=""
-            />
-            <legend>Fort de Pomègues</legend>
-          </div>
-          <div class="mini23">
-            <img
-             src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-             alt=""
-            />
-            <div>Îles du Frioul</div>
+      <div class="blockpop">
+        <h1 class="blocktitle">Les plus populaires<i class="fas fa-chart-line"></i></h1>
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+            alt=""
+          />
+          <div>
+            <h1 class="blocktitle">Au Soleil du matin</h1>
+            Nuit à partir de 128$
           </div>
         </div>
-          <div class="mini24">
-            <img
-             src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-             alt=""
-            />
-            <div>Parc National des Calanques</div>
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+            alt=""
+          />
+          <div>
+            <h1 class="blocktitle">Au coeur de l'eau Chambres d'hôtes</h1>
+            Nuit à partir de 71$
           </div>
-        <div class="inblock">
-          <div class="mini25">
-            <img
-             src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-             alt=""
-            />
-            <div>Notre-Dame-de-la-Garde</div>
-          </div>
-          <div class="mini26">
-            <img
-             src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-             alt=""
-            />
-            <div>Parc Longchamp</div>
+        </div>
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+            alt=""
+          />
+          <div>
+            <h1 class="blocktitle">Hotel Tout Bleu et Blanc</h1>
+            Nuit à partir de 68$
           </div>
         </div>
       </div>
+    </div>
+    <h1 class="blocktitle">Activités à Marseille</h1>
+    <div class="blockact">
+      <div class="miniblockpic">
+        <img
+          class="imgblock"
+          src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+          alt=""
+        />
+        <caption>
+          Vieux Port
+        </caption>
+      </div>
+      <div class="inblockact">
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+            alt=""
+          />
+          <legend>Fort de Pomègues</legend>
+        </div>
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+            alt=""
+          />
+          <div>Îles du Frioul</div>
+        </div>
+      </div>
+      <div class="miniblockpic">
+        <img
+          class="imgblock"
+          src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+          alt=""
+        />
+        <div>Parc National des Calanques</div>
+      </div>
+      <div class="inblockact">
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+            alt=""
+          />
+          <div>Notre-Dame-de-la-Garde</div>
+        </div>
+        <div class="miniblockpic">
+          <img
+            class="imgblock"
+            src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+            alt=""
+          />
+          <div>Parc Longchamp</div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="footer-section">
         <h3>A propos</h3>
