--- a/index.html
+++ b/index.html
@@ -31,90 +31,104 @@
         </div>
         <div class="trouvez">
           <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
-          En plein centre ville ou en pleine nature
+          <span class="nature">En plein centre ville ou en pleine nature</span>
         </div>
         <section class="section">
-          <h1 class="marseille"><i class="fas fa-map-marker-alt"></i>Marseille, France<span class="rechercher">Rechercher</span></h1>
+          <div class="marseille">
+            <div class="inmarseille">
+             <i class="fas fa-map-marker-alt"></i>
+             <span>Marseille, France</span>
+             <span class="rechercher">Rechercher</span>
+            </div>
+          </div>
           <h2 class="filters">
            <span>Filtres</span>
-           <span class="filtersin"><i class="fas fa-money-bill-wave"></i>Economies</span>
-           <span class="filtersin"><i class="fas fa-child"></i>Familial</span>
-           <span class="filtersin"><i class="fas fa-heart"></i>Romantique</span>
-           <span class="filtersin"><i class="fas fa-dog"></i>Animaux autorisés</span>
+            <span class="filtersin">
+             <i class="fas fa-money-bill-wave"></i><span class="textfilters">Economies</span>
+            </span>
+            <span class="filtersin">
+             <i class="fas fa-child"></i><span class="textfilters">Familial</span>
+            </span>
+            <span class="filtersin"><i class="fas fa-heart">
+             </i><span class="textfilters">Romantique</span>
+            </span>
+            <span class="filtersin">
+              <i class="fas fa-dog"></i><span class="textfilters">Animaux autorisés</span>
+            </span>
           </h2>
           <li class="hbg"><i class="fas fa-info-circle"></i>Plus de 500 hébergments sont disponibles dans cette ville</li>
         </section>
       </header>
     </div>
-    <div class="container2">
+    <div class="containertwo">
       <div class="blockheb">
-        <h1 class="blocktitle">Hébergements à Marseille</h1>
+        <h1 class="blockbigtitle">Hébergements à Marseille</h1>
         <div class="miniblockheb">
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Auberge de la Cannebière</h1>
+              <h1 class="blocksmalltitle">Auberge de la Cannebière</h1>
               Nuit à partir de 25$
             </div>
           </div>
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Hotel du port</h1>
+              <h1 class="blocksmalltitle">Hotel du port</h1>
               Nuit à partir de 52$
             </div>
           </div>
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Hotel Les mouettes</h1>
+              <h1 class="blocksmalltitle">Hotel Les mouettes</h1>
               Nuit à partir de 76$
             </div>
           </div>
         </div>
         <div class="miniblockheb">
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Hotel de la mer</h1>
+              <h1 class="blocksmalltitle">Hotel de la mer</h1>
               Nuit à partir de 46$
             </div>
           </div>
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Auberge le Panier</h1>
+              <h1 class="blocksmalltitle">Auberge le Panier</h1>
               Nuit à partir de 23$
             </div>
           </div>
-          <div class="miniblockpic">
+          <div class="miniblockpichbg">
             <img
-              class="imgblock"
+              class="imgblockhbg"
               src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
               alt=""
             />
             <div>
-              <h1 class="blocktitle">Hotel chez Amina</h1>
+              <h1 class="blocksmalltitle">Hotel chez Amina</h1>
               Nuit à partir de 96$
             </div>
           </div>
@@ -124,32 +138,32 @@
         </div>
       </div>
       <div class="blockpop">
-        <h1 class="blocktitle">Les plus populaires<i class="fas fa-chart-line"></i></h1>
-        <div class="miniblockpic">
+        <h1 class="blockbigtitle">Les plus populaires<i class="fas fa-chart-line"></i></h1>
+        <div class="miniblockpicpop">
           <img
-            class="imgblock"
+            class="imgblockpop"
             src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
             alt=""
           />
           <div>
-            <h1 class="blocktitle">Au Soleil du matin</h1>
+            <h1 class="blocksmalltitle">Au Soleil du matin</h1>
             Nuit à partir de 128$
           </div>
         </div>
-        <div class="miniblockpic">
+        <div class="miniblockpicpop">
           <img
-            class="imgblock"
+            class="imgblockpop"
             src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
             alt=""
           />
           <div>
-            <h1 class="blocktitle">Au coeur de l'eau Chambres d'hôtes</h1>
+            <h1 class="blocksmalltitle">Au coeur de l'eau Chambres d'hôtes</h1>
             Nuit à partir de 71$
           </div>
         </div>
-        <div class="miniblockpic">
+        <div class="miniblockpicpop">
           <img
-            class="imgblock"
+            class="imgblockpop"
             src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
             alt=""
           />
@@ -160,60 +174,60 @@
         </div>
       </div>
     </div>
-    <h1 class="blocktitle">Activités à Marseille</h1>
+    <h1 class="blockbigtitle">Activités à Marseille</h1>
     <div class="blockact">
-      <div class="miniblockpic">
+      <div class="miniblockpicact">
         <img
-          class="imgblock"
+          class="imgblockactone"
           src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
           alt=""
         />
-        <caption>
+        <caption class="blocksmalltitle">
           Vieux Port
         </caption>
       </div>
       <div class="inblockact">
-        <div class="miniblockpic">
+        <div class="miniblockpicact">
           <img
-            class="imgblock"
+            class="imgblockactacttwo"
             src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
             alt=""
           />
-          <legend>Fort de Pomègues</legend>
+          <legend class="blocksmalltitle">Fort de Pomègues</legend>
         </div>
-        <div class="miniblockpic">
+        <div class="miniblockpicact">
           <img
-            class="imgblock"
+            class="imgblockacttwo"
             src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
             alt=""
           />
-          <div>Îles du Frioul</div>
+          <div class="blocksmalltitle">Îles du Frioul</div>
         </div>
       </div>
-      <div class="miniblockpic">
+      <div class="miniblockpicact">
         <img
-          class="imgblock"
+          class="imgblockactone"
           src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
           alt=""
         />
-        <div>Parc National des Calanques</div>
+        <div class="blocksmalltitle">Parc National des Calanques</div>
       </div>
       <div class="inblockact">
-        <div class="miniblockpic">
+        <div class="miniblockpicact">
           <img
-            class="imgblock"
+            class="imgblockacttwo"
             src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
             alt=""
           />
-          <div>Notre-Dame-de-la-Garde</div>
+          <div class="blocksmalltitle">Notre-Dame-de-la-Garde</div>
         </div>
-        <div class="miniblockpic">
+        <div class="miniblockpicact">
           <img
-            class="imgblock"
+            class="imgblockacttwo"
             src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
             alt=""
           />
-          <div>Parc Longchamp</div>
+          <div class="blocksmalltitle">Parc Longchamp</div>
         </div>
       </div>
     </div>
@@ -221,23 +235,23 @@
       <div class="footer-section">
         <h3>A propos</h3>
         <ul>
-          <a href=""><li>Fontionnement du site</li></a>
-          <a href=""><li>Conditions générales de vente</li></a>
-          <a href=""><li>Données et confidentialité</li></a>
+          <li><a href="">Fontionnement du site</a></li>
+          <li><a href="">Conditions générales de vente</a></li>
+          <li><a href="">Données et confidentialité</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h3>Nos hébergements</h3>
         <ul>
-          <a href=""><li>Charte qualité</li></a>
-          <a href=""><li>Soumettre votre hôtel</li></a>
+          <li><a href="">Charte qualité</a></li>
+          <li><a href="">Soumettre votre hôtel</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h3>Assistance</h3>
         <ul>
-          <a href=""><li>Centre d'aide</li></a>
-          <a href=""><li>Nous contacter</li></a>
+          <li><a href="">Centre d'aide</a></li>
+          <li><a href="">>Nous contacter</a></li>
         </ul>
       </div>
     </footer>
