--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="top-header">
           <img src="images/logo/Reservia@3x.png" alt="" />
           <div class="blocknav">
-            <div class="nav-item">
+            <div class="nav-itemblue">
               <a href="index.html" class="nav-link-active">Hébergement</a>
             </div>
             <div class="nav-item">
@@ -65,111 +65,162 @@
         <h1 class="blockbigtitle">Hébergements à Marseille</h1>
         <div class="miniblockheb">
           <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Auberge de la Cannebière</h1>
-              Nuit à partir de 25$
+            <div class="divimghbg">
+              <img
+               class="imgblockhbg"
+               src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+               alt=""
+              />
+            </div>
+            <div class="blocksmalltitle">
+              <div class="bigsmalltitle">Auberge de la Cannebière</div>
+              <div>Nuit à partir de 25$</div>
+              <div class="allstars">
+                <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <div class="greystar"><i class="fas fa-star"></i></div>
+              </div>
             </div>
           </div>
           <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Hotel du port</h1>
-              Nuit à partir de 52$
+            <div class="divimghbg">
+              <img
+               class="imgblockhbg"
+               src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+               alt=""
+              />
+            </div>
+            <div class="blocksmalltitle">
+              <div class="bigsmalltitle">Hotel du port</div>
+              <div>Nuit à partir de 52$</div>
+              <div class="allstars">
+                <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+              </div>
             </div>
           </div>
           <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Hotel Les mouettes</h1>
-              Nuit à partir de 76$
+            <div class="divimghbg">
+              <img
+               class="imgblockhbg"
+               src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+               alt=""
+              />
+            </div>
+            <div class="blocksmalltitle">
+              <div class="bigsmalltitle">Hotel Les mouettes</div>
+              <div>Nuit à partir de 76$</div>
+              <div class="allstars">
+                <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <div class="greystar"><i class="fas fa-star"></i></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="miniblockheb">
           <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Hotel de la mer</h1>
-              Nuit à partir de 46$
+              <div class="divimghbg">
+                <img
+                 class="imgblockhbg"
+                 src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                 alt=""
+                />
+              </div>
+              <div class="blocksmalltitle">
+                <div class="bigsmalltitle">Hotel de la mer</div>
+                <div>Nuit à partir de 46$</div>
+                <div class="allstars">
+                  <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                  <div class="greystar"><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                </div>
+              </div>
+          </div>
+          <div class="miniblockpichbg">
+            <div class="divimghbg">
+              <img
+               class="imgblockhbg"
+               src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+               alt=""
+              />
+            </div>
+            <div class="blocksmalltitle">
+              <div class="bigsmalltitle">Auberge le Panier</div>
+              <div>Nuit à partir de 23$</div>
+              <div class="allstars">
+                <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <div class="greystar"><i class="fas fa-star"></i></div>
+              </div>
             </div>
           </div>
           <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Auberge le Panier</h1>
-              Nuit à partir de 23$
+            <div class="divimghbg">
+              <img
+               class="imgblockhbg"
+               src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+               alt=""
+              />
             </div>
-          </div>
-          <div class="miniblockpichbg">
-            <img
-              class="imgblockhbg"
-              src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-              alt=""
-            />
-            <div>
-              <h1 class="blocksmalltitle">Hotel chez Amina</h1>
-              Nuit à partir de 96$
+            <div class="blocksmalltitle">
+              <div class="bigsmalltitle">Hotel chez Amina</div>
+              <div>Nuit à partir de 96$</div>
+              <div class="allstars">
+                <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="afficher">
-          <h1 class="text">Afficher plus</h1>
+         <h1 class="text">Afficher plus</h1>
         </div>
       </div>
       <div class="blockpop">
         <h1 class="blockbigtitle">Les plus populaires<i class="fas fa-chart-line"></i></h1>
         <div class="miniblockpicpop">
-          <img
-            class="imgblockpop"
-            src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-            alt=""
-          />
-          <div>
-            <h1 class="blocksmalltitle">Au Soleil du matin</h1>
-            Nuit à partir de 128$
+          <div class="divimgpop">
+            <img
+             class="imgblockpop"
+             src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="blocksmalltitle">
+            <div class="bigsmalltitle">Au Soleil du matin</div>
+            <div>Nuit à partir de 128$</div>
+            <div class="allstars">
+              <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+            </div>
           </div>
         </div>
         <div class="miniblockpicpop">
-          <img
-            class="imgblockpop"
-            src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-            alt=""
-          />
-          <div>
-            <h1 class="blocksmalltitle">Au coeur de l'eau Chambres d'hôtes</h1>
-            Nuit à partir de 71$
+          <div class="divimgpop">
+            <img
+             class="imgblockpop"
+             src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="blocksmalltitle">
+            <div class="bigsmalltitle">Au coeur de l'eau Chambres d'hôtes</div>
+            <div>Nuit à partir de 71$</div>
+            <div class="allstars">
+              <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+              <div class="greystar"><i class="fas fa-star"></i></div>
+            </div>
           </div>
         </div>
         <div class="miniblockpicpop">
-          <img
-            class="imgblockpop"
-            src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-            alt=""
-          />
-          <div>
-            <h1 class="blocktitle">Hotel Tout Bleu et Blanc</h1>
-            Nuit à partir de 68$
+          <div class="divimgpop">
+            <img
+             class="imgblockpop"
+             src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="blocksmalltitle">
+            <div class="bigsmalltitle">Hotel Tout Bleu et Blanc</div>
+            <div>Nuit à partir de 68$</div>
+            <div class="allstars">
+              <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+              <div class="greystar"><i class="fas fa-star"></i></div>
+            </div>
           </div>
         </div>
       </div>
@@ -177,57 +228,69 @@
     <h1 class="blockbigtitle">Activités à Marseille</h1>
     <div class="blockact">
       <div class="miniblockpicact">
-        <img
-          class="imgblockactone"
-          src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-          alt=""
-        />
-        <caption class="blocksmalltitle">
+        <div class="divimgact">
+          <img
+           class="imgblockactone"
+           src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+           alt=""
+          />
+        </div>
+        <legend class="bigsmalltitle">
           Vieux Port
-        </caption>
+        </legend>
       </div>
       <div class="inblockact">
         <div class="miniblockpicact">
-          <img
-            class="imgblockactacttwo"
-            src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-            alt=""
-          />
-          <legend class="blocksmalltitle">Fort de Pomègues</legend>
+          <div class="divimgacthalf">
+            <img
+             class="imgblockactacttwo"
+             src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <legend class="bigsmalltitle">Fort de Pomègues</legend>
         </div>
         <div class="miniblockpicact">
-          <img
-            class="imgblockacttwo"
-            src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-            alt=""
-          />
-          <div class="blocksmalltitle">Îles du Frioul</div>
+          <div class="divimgacthalf">
+            <img
+             class="imgblockacttwo"
+             src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="bigsmalltitle">Îles du Frioul</div>
         </div>
       </div>
       <div class="miniblockpicact">
-        <img
-          class="imgblockactone"
-          src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-          alt=""
-        />
-        <div class="blocksmalltitle">Parc National des Calanques</div>
+        <div class="divimgact">
+          <img
+           class="imgblockactone"
+           src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+           alt=""
+          />
+        </div>
+        <div class="bigsmalltitle">Parc National des Calanques</div>
       </div>
       <div class="inblockact">
         <div class="miniblockpicact">
-          <img
-            class="imgblockacttwo"
-            src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-            alt=""
-          />
-          <div class="blocksmalltitle">Notre-Dame-de-la-Garde</div>
+          <div class="divimgacthalf">
+            <img
+             class="imgblockacttwo"
+             src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="bigsmalltitle">Notre-Dame-de-la-Garde</div>
         </div>
         <div class="miniblockpicact">
-          <img
-            class="imgblockacttwo"
-            src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-            alt=""
-          />
-          <div class="blocksmalltitle">Parc Longchamp</div>
+          <div class="divimgacthalf">
+            <img
+             class="imgblockacttwo"
+             src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+             alt=""
+            />
+          </div>
+          <div class="bigsmalltitle">Parc Longchamp</div>
         </div>
       </div>
     </div>
@@ -251,7 +314,7 @@
         <h3>Assistance</h3>
         <ul>
           <li><a href="">Centre d'aide</a></li>
-          <li><a href="">>Nous contacter</a></li>
+          <li><a href="">Nous contacter</a></li>
         </ul>
       </div>
     </footer>
