--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         </div>
         <div class="miniblockheb">
           <div class="miniblockpichbg">
-              <div class="divimghbg">
+              <div class="divimghbghalf">
                 <img
-                 class="imgblockhbg"
+                 class="imgblockhbghalfmer"
                  src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                  alt=""
                 />
@@ -151,9 +151,9 @@
             </div>
           </div>
           <div class="miniblockpichbg">
-            <div class="divimghbg">
+            <div class="divimghbghalf">
               <img
-               class="imgblockhbg"
+               class="imgblockhbghalfamina"
                src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                alt=""
               />
@@ -183,7 +183,7 @@
           </div>
           <div class="blocksmalltitle">
             <div class="bigsmalltitle">Au Soleil du matin</div>
-            <div>Nuit à partir de 128$</div>
+            <div class="nuit">Nuit à partir de 128$</div>
             <div class="allstars">
               <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
             </div>
@@ -199,7 +199,7 @@
           </div>
           <div class="blocksmalltitle">
             <div class="bigsmalltitle">Au coeur de l'eau Chambres d'hôtes</div>
-            <div>Nuit à partir de 71$</div>
+            <div class="nuit">Nuit à partir de 71$</div>
             <div class="allstars">
               <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
               <div class="greystar"><i class="fas fa-star"></i></div>
@@ -216,7 +216,7 @@
           </div>
           <div class="blocksmalltitle">
             <div class="bigsmalltitle">Hotel Tout Bleu et Blanc</div>
-            <div>Nuit à partir de 68$</div>
+            <div class="nuit">Nuit à partir de 68$</div>
             <div class="allstars">
               <div class="bluestar"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
               <div class="greystar"><i class="fas fa-star"></i></div>
@@ -225,72 +225,82 @@
         </div>
       </div>
     </div>
-    <h1 class="blockbigtitle">Activités à Marseille</h1>
+    <h1 class="blockbigtitleact">Activités à Marseille</h1>
     <div class="blockact">
-      <div class="miniblockpicact">
-        <div class="divimgact">
+      <div class="miniblockpicactvieuxportcalanques">
+        <div class="divimgactvieuxportcalanques">
           <img
-           class="imgblockactone"
+           class="imgblockactonevieuxportcalanques"
            src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
            alt=""
           />
         </div>
-        <legend class="bigsmalltitle">
+        <legend class="smalltitleact">
           Vieux Port
         </legend>
       </div>
       <div class="inblockact">
-        <div class="miniblockpicact">
-          <div class="divimgacthalf">
+        <div class="miniblockpicactfort">
+          <div class="divimgactfort">
             <img
-             class="imgblockactacttwo"
+             class="imgblockactfort"
              src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
              alt=""
             />
           </div>
-          <legend class="bigsmalltitle">Fort de Pomègues</legend>
+          <div class="smalltitleact">
+            Fort de Pomègues
+          </div>
         </div>
-        <div class="miniblockpicact">
-          <div class="divimgacthalf">
+        <div class="miniblockpicactfrioul">
+          <div class="divimgactfrioul">
             <img
-             class="imgblockacttwo"
+             class="imgblockactfrioul"
              src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
              alt=""
             />
           </div>
-          <div class="bigsmalltitle">Îles du Frioul</div>
+          <div class="smalltitleact">
+            Îles du Frioul
+          </div>
         </div>
       </div>
-      <div class="miniblockpicact">
-        <div class="divimgact">
+      <div class="miniblockpicactvieuxportcalanques">
+        <div class="divimgactvieuxportcalanques">
           <img
-           class="imgblockactone"
+           class="imgblockactonevieuxportcalanques"
            src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
            alt=""
           />
         </div>
-        <div class="bigsmalltitle">Parc National des Calanques</div>
+        <div class="smalltitleact">
+          Parc National des Calanques
+        </div>
       </div>
       <div class="inblockact">
-        <div class="miniblockpicact">
-          <div class="divimgacthalf">
+        <div class="miniblockpicactgardelongchamps">
+          <div class="divimgactgardelongchamps">
             <img
-             class="imgblockacttwo"
+             class="imgblockactgardelongchamps"
              src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
              alt=""
             />
           </div>
-          <div class="bigsmalltitle">Notre-Dame-de-la-Garde</div>
+          <div class="smalltitleact">
+            Notre-Dame-de-la-Garde
+          </div>
         </div>
-        <div class="miniblockpicact">
-          <div class="divimgacthalf">
+        <div class="miniblockpicactgardelongchamps">
+          <div class="divimgactgardelongchamps">
             <img
-             class="imgblockacttwo"
+             class="imgblockactgardelongchamps"
              src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
              alt=""
             />
           </div>
-          <div class="bigsmalltitle">Parc Longchamp</div>
+          <div class="smalltitleact">
+            Parc Longchamp
+          </div>
         </div>
       </div>
     </div>
